deploy: 17326f37b5ddfd7327f22cd0511e15a9edd20666

--- a/difficulties/index.html
+++ b/difficulties/index.html
@@ -17,7 +17,11 @@
 
 <link rel="stylesheet" href="../scss/main.min.be588b3d120141efcf2b8a68c20cb46f26857995dab56d5cd6df0d1837533392.css"  integrity="sha256-vliLPRIBQe/PK4powgy0byaFeZXatW1c1t8NGDdTM5I=">
 
-    <title>Browsing all difficulties</title>
+    <title>Browsing all difficulties | CompSoc Cookbook</title>
+    <meta property="og:title" content="List of all difficulties" />
+    <meta property="og:description" content="Are you a master chef? Or a rookie starting your first dish? Select your desired recipe difficulty here and narrow your choice down." />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://cookbook.betterinformatics.com" />
   </head>
   <body>
     <div class="container">
