--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <meta property="og:title" content="CompSoc Cookbook" />
     <meta property="og:description" content="Hey, good lookin&#39;, whatcha got cookin&#39;?" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://comp-soc.com/cookbook" />
+    <meta property="og:url" content="https://cookbook.betterinformatics.com" />
   </head>
   <body>
     <div class="container">
