--- a/recipes/bacon-potato-and-split-pea-soup/index.html
+++ b/recipes/bacon-potato-and-split-pea-soup/index.html
@@ -19,7 +19,7 @@
 
     <title>Bacon, Potato And Split Pea Soup | CompSoc Cookbook</title>
     <meta property="og:title" content="Bacon, Potato And Split Pea Soup" />
-    <meta property="og:description" content="Difficulty: 1-medium\nMeal: main_courses\nIngredients  6 rashers of bacon, cut into 1in strips 1 onion, diced 2 cloves of garlic, minced 450g yellow split peas 1.5L chicken stock 1 bay leaf 700g potatoes (usually 1/4 of a bag)  Method  Fry the bacon in a large pot over a medium heat. Once the bacon has browned, add the chopped onion and garlic to the pot and fry for another 5 minutes until the onions are translucent." />
+    <meta property="og:description" content="Difficulty: 1-medium • Meal: main_courses • Ingredients  6 rashers of bacon, cut into 1in strips 1 onion, diced 2 cloves of garlic, minced 450g yellow split peas 1.5L chicken stock 1 bay leaf 700g potatoes (usually 1/4 of a bag)  Method  Fry the bacon in a large pot over a medium heat. Once the bacon has browned, add the chopped onion and garlic to the pot and fry for another 5 minutes until the onions are translucent." />
     <meta property="og:url" content="https://github.com/compsoc-edinburgh/cook-book" />
     <meta property="og:site_name" content="CompSoc Cookbook" />
     <meta property="og:type" content="article" />
