--- a/recipes/baked-sausage-with-sweet-potato-and-fennel/index.html
+++ b/recipes/baked-sausage-with-sweet-potato-and-fennel/index.html
@@ -19,7 +19,7 @@
 
     <title>Baked Sausage With Sweet Potato And Fennel | CompSoc Cookbook</title>
     <meta property="og:title" content="Baked Sausage With Sweet Potato And Fennel" />
-    <meta property="og:description" content="Difficulty: 1-medium\nMeal: main_courses\nIngredients  500g sweet potatoes (approx. 2 large ones), peeled 1 healthy-sized fennel bulb 3 garlic cloves, peeled and sliced 1 tsp celery seeds 1 tbsp dark brown sugar 3 tbsp olive oil 8 solid, good-quality sausages 8 smoked back bacon rashers 1 tbsp plain flour 100ml apple juice 50ml dry white wine (rough measurement) 2 tbsp balsamic vinegar 1 or 2 sprigs of thyme or fennel fronds if you can find them Salt and pepper  Method  Preheat the oven to 200C." />
+    <meta property="og:description" content="Difficulty: 1-medium • Meal: main_courses • Ingredients  500g sweet potatoes (approx. 2 large ones), peeled 1 healthy-sized fennel bulb 3 garlic cloves, peeled and sliced 1 tsp celery seeds 1 tbsp dark brown sugar 3 tbsp olive oil 8 solid, good-quality sausages 8 smoked back bacon rashers 1 tbsp plain flour 100ml apple juice 50ml dry white wine (rough measurement) 2 tbsp balsamic vinegar 1 or 2 sprigs of thyme or fennel fronds if you can find them Salt and pepper  Method  Preheat the oven to 200C." />
     <meta property="og:url" content="https://github.com/compsoc-edinburgh/cook-book" />
     <meta property="og:site_name" content="CompSoc Cookbook" />
     <meta property="og:type" content="article" />
