--- a/recipes/best-thai-green-curry/index.html
+++ b/recipes/best-thai-green-curry/index.html
@@ -19,7 +19,7 @@
 
     <title>Thai Green Curry | CompSoc Cookbook</title>
     <meta property="og:title" content="Thai Green Curry" />
-    <meta property="og:description" content="Difficulty: 1-medium\nMeal: main_courses\nIngredients  2 tbsp Thai green curry paste (adjust for spice tolerance) 1 tbsp soft dark brown sugar 1-2 thick stalks lemongrass, fat ends bashed with a rolling pin (optional) 750g chicken, cut into chunks 6-8 kaffir lime leaves, torn into pieces 400ml coconut milk (have a spare in case you need to take the spice out) Good shake of Thai fish sauce or light soy sauce Small handful of coriander, roughly chopped 1/2 - 1 lime, juice only  Method  Heat the oil in a wok or large frying pan." />
+    <meta property="og:description" content="Difficulty: 1-medium • Meal: main_courses • Ingredients  2 tbsp Thai green curry paste (adjust for spice tolerance) 1 tbsp soft dark brown sugar 1-2 thick stalks lemongrass, fat ends bashed with a rolling pin (optional) 750g chicken, cut into chunks 6-8 kaffir lime leaves, torn into pieces 400ml coconut milk (have a spare in case you need to take the spice out) Good shake of Thai fish sauce or light soy sauce Small handful of coriander, roughly chopped 1/2 - 1 lime, juice only  Method  Heat the oil in a wok or large frying pan." />
     <meta property="og:url" content="https://github.com/compsoc-edinburgh/cook-book" />
     <meta property="og:site_name" content="CompSoc Cookbook" />
     <meta property="og:type" content="article" />
