--- a/recipes/brazilian-coconut-chicken/index.html
+++ b/recipes/brazilian-coconut-chicken/index.html
@@ -19,7 +19,7 @@
 
     <title>Brazilian Coconut Chicken | CompSoc Cookbook</title>
     <meta property="og:title" content="Brazilian Coconut Chicken" />
-    <meta property="og:description" content="Difficulty: 1-medium\nMeal: main_courses\nIngredients  1 tsp ground cumin 1 tsp ground cayenne pepper 1 tsp ground turmeric 1 tsp ground coriander 4 chicken breasts, chopped into cubes 1 onion, chopped 1 tbsp minced fresh ginger 2 green chillies, seeded and chopped 2 cloves garlic, minced 3 tomatoes, seeded and chopped 1 (400ml) tin light coconut milk  Method  In a mixing bowl, combine the spices and place the chicken in, seasoning with salt and pepper." />
+    <meta property="og:description" content="Difficulty: 1-medium • Meal: main_courses • Ingredients  1 tsp ground cumin 1 tsp ground cayenne pepper 1 tsp ground turmeric 1 tsp ground coriander 4 chicken breasts, chopped into cubes 1 onion, chopped 1 tbsp minced fresh ginger 2 green chillies, seeded and chopped 2 cloves garlic, minced 3 tomatoes, seeded and chopped 1 (400ml) tin light coconut milk  Method  In a mixing bowl, combine the spices and place the chicken in, seasoning with salt and pepper." />
     <meta property="og:url" content="https://github.com/compsoc-edinburgh/cook-book" />
     <meta property="og:site_name" content="CompSoc Cookbook" />
     <meta property="og:type" content="article" />
