--- a/recipes/bulgar_wheat_with_pine_nuts_carrot_and_feta/index.html
+++ b/recipes/bulgar_wheat_with_pine_nuts_carrot_and_feta/index.html
@@ -19,7 +19,7 @@
 
     <title>Bulgar Wheat with Pine Nuts, Carrot and Feta | CompSoc Cookbook</title>
     <meta property="og:title" content="Bulgar Wheat with Pine Nuts, Carrot and Feta" />
-    <meta property="og:description" content="Difficulty: 0-easy\nMeal: main_courses\nIngredients  300g bulgur wheat 70g sultanas 500ml hot vegetable/chicken stock 2 medium carrots, coarsely grated 3 tbsp pine nuts 100g feta, crumbled (about half a packet) juice &amp; zest 1/2 lemon 3 tbsp rapeseed/olive oil  Method  Put the bulgur and sultanas in a large bowl and pour over the hot stock. Cover with cling film and leave for 20-30 mins for the liquid to be absorbed. After the soaking, fluff the grains with a fork and leave to cool." />
+    <meta property="og:description" content="Difficulty: 0-easy • Meal: main_courses • Ingredients  300g bulgur wheat 70g sultanas 500ml hot vegetable/chicken stock 2 medium carrots, coarsely grated 3 tbsp pine nuts 100g feta, crumbled (about half a packet) juice &amp; zest 1/2 lemon 3 tbsp rapeseed/olive oil  Method  Put the bulgur and sultanas in a large bowl and pour over the hot stock. Cover with cling film and leave for 20-30 mins for the liquid to be absorbed. After the soaking, fluff the grains with a fork and leave to cool." />
     <meta property="og:url" content="https://github.com/compsoc-edinburgh/cook-book" />
     <meta property="og:site_name" content="CompSoc Cookbook" />
     <meta property="og:type" content="article" />
