--- a/recipes/chicken-and-lentil-dahl/index.html
+++ b/recipes/chicken-and-lentil-dahl/index.html
@@ -19,7 +19,7 @@
 
     <title>Chicken and Lentil Dahl | CompSoc Cookbook</title>
     <meta property="og:title" content="Chicken and Lentil Dahl" />
-    <meta property="og:description" content="Difficulty: 1-medium\nMeal: main_courses\nIngredients  215g red lentils 500g chicken breasts, cut in half 3/4 teaspoon salt, or to taste 1/2 teaspoon turmeric 2 tablespoons grated fresh ginger 1 teaspoon ground ginger 3 teaspoons cumin seeds 5 black cardamom pods or 10 green cardamom pods, lightly crushed 2 tablespoons olive oil 1 small onion, thinly sliced 6 garlic cloves, finely chopped 2-6 green chillies, chopped (based on preference)  Method  Place the lentils, chicken, salt, turmeric, fresh ginger, ground ginger, 2 teaspoons of the cumin seeds and the cardamom pods in a deep saucepan." />
+    <meta property="og:description" content="Difficulty: 1-medium • Meal: main_courses • Ingredients  215g red lentils 500g chicken breasts, cut in half 3/4 teaspoon salt, or to taste 1/2 teaspoon turmeric 2 tablespoons grated fresh ginger 1 teaspoon ground ginger 3 teaspoons cumin seeds 5 black cardamom pods or 10 green cardamom pods, lightly crushed 2 tablespoons olive oil 1 small onion, thinly sliced 6 garlic cloves, finely chopped 2-6 green chillies, chopped (based on preference)  Method  Place the lentils, chicken, salt, turmeric, fresh ginger, ground ginger, 2 teaspoons of the cumin seeds and the cardamom pods in a deep saucepan." />
     <meta property="og:url" content="https://github.com/compsoc-edinburgh/cook-book" />
     <meta property="og:site_name" content="CompSoc Cookbook" />
     <meta property="og:type" content="article" />
