--- a/recipes/chickpea-curry/index.html
+++ b/recipes/chickpea-curry/index.html
@@ -19,7 +19,7 @@
 
     <title>Chickpea Curry | CompSoc Cookbook</title>
     <meta property="og:title" content="Chickpea Curry" />
-    <meta property="og:description" content="Difficulty: 1-medium\nMeal: main_courses\nIngredients  1 tbsp oil 1 onion, finely chopped 2 garlic cloves, thinly sliced 1 green pepper, cored, deseeded and chopped 150g red lentils, rinsed 2 tsp garam masala 1 tsp cumin seeds 1/2 tsp hot chilli powder 1 tsp ground coriander 2 tbsp tomato purée 700ml hot vegetable stock 400g tin chickpeas, drained 2 tbsp chopped coriander, to garnish salt and freshly ground black pepper  Method  Heat the oil in a heavy-based saucepan over a medium heat, add the onion, garlic and green pepper and fry gently for 10-12 minutes or until softened and beginning to colour." />
+    <meta property="og:description" content="Difficulty: 1-medium • Meal: main_courses • Ingredients  1 tbsp oil 1 onion, finely chopped 2 garlic cloves, thinly sliced 1 green pepper, cored, deseeded and chopped 150g red lentils, rinsed 2 tsp garam masala 1 tsp cumin seeds 1/2 tsp hot chilli powder 1 tsp ground coriander 2 tbsp tomato purée 700ml hot vegetable stock 400g tin chickpeas, drained 2 tbsp chopped coriander, to garnish salt and freshly ground black pepper  Method  Heat the oil in a heavy-based saucepan over a medium heat, add the onion, garlic and green pepper and fry gently for 10-12 minutes or until softened and beginning to colour." />
     <meta property="og:url" content="https://github.com/compsoc-edinburgh/cook-book" />
     <meta property="og:site_name" content="CompSoc Cookbook" />
     <meta property="og:type" content="article" />
