--- a/recipes/chocolate-cupcakes/index.html
+++ b/recipes/chocolate-cupcakes/index.html
@@ -19,7 +19,7 @@
 
     <title>Chocolate cupcakes | CompSoc Cookbook</title>
     <meta property="og:title" content="Chocolate cupcakes" />
-    <meta property="og:description" content="Difficulty: 1-medium\nMeal: desserts\nThis recipe is adapted from a vegetarian cookbook, and it&rsquo;s quickly become a favorite for its delicious frosting and fluffy base!
+    <meta property="og:description" content="Difficulty: 1-medium • Meal: desserts • This recipe is adapted from a vegetarian cookbook, and it&rsquo;s quickly become a favorite for its delicious frosting and fluffy base!
 Ingredients For the cupcake
  175g plain or all-purpose flour 2tsp cocoa powder 1.5tsp baking powder 140g sugar 25g ground almonds 2 large eggs 175g full-fat yogurt 2-3 drops vanilla extract 25g butter, melted 2tsp rapeseed oil  For the frosting
  25g dark chocolate, finely chopped 1tbsp dark chocolate, grated for decorating 25g butter, softened 50g icing (powdered) sugar 1tbsp cocoa powder 1tsp semi-skimmed milk 100g low-fat curd cheese." />
