--- a/recipes/chocolate-roll/index.html
+++ b/recipes/chocolate-roll/index.html
@@ -19,7 +19,7 @@
 
     <title>Chocolate roll | CompSoc Cookbook</title>
     <meta property="og:title" content="Chocolate roll" />
-    <meta property="og:description" content="Difficulty: 1-medium\nMeal: desserts\nThis no-bake roll with biscuits and cocoa is a Romanian family favorite dessert! Inspired by this recipe with a couple of modifications.
+    <meta property="og:description" content="Difficulty: 1-medium • Meal: desserts • This no-bake roll with biscuits and cocoa is a Romanian family favorite dessert! Inspired by this recipe with a couple of modifications.
 Ingredients  200g butter biscuits (you can add more to taste - Leibniz type biscuits should work best) 50g cocoa powder 130g butter 100ml milk 125g sugar (either brown or white) 50g dark chocolate (at least 50% cocoa) rum essence (not necessary but it makes the taste much better - any Polish store should have it) vanilla sugar powdered sugar extra filling: nuts, almonds, raisins, cranberries, candied fruit, finely chopped Turkish delight, coconut flakes, or several of these!" />
     <meta property="og:url" content="https://github.com/compsoc-edinburgh/cook-book" />
     <meta property="og:site_name" content="CompSoc Cookbook" />
