--- a/recipes/chorizo-and-pearl-barley-risotto/index.html
+++ b/recipes/chorizo-and-pearl-barley-risotto/index.html
@@ -19,7 +19,7 @@
 
     <title>Chorizo and Pearl Barley Risotto | CompSoc Cookbook</title>
     <meta property="og:title" content="Chorizo and Pearl Barley Risotto" />
-    <meta property="og:description" content="Difficulty: 1-medium\nMeal: main_courses\nIngredients  Chorizo ring, sliced into coins 1 onion, finely chopped 2 garlic cloves, finely chopped 1 tsp smoked paprika 300g pearl barley 400g can of chopped tomatoes 1L hot chicken stock 2 stalks of rosemary, leaves chopped and stalks removed  Method  Heat a pan over a medium heat and fry chorizo for about 5 minutes until golden and have released its oil. Remove with a slotted spoon and set aside, covering with tin foil to keep warm (and stop you eating all of them)." />
+    <meta property="og:description" content="Difficulty: 1-medium • Meal: main_courses • Ingredients  Chorizo ring, sliced into coins 1 onion, finely chopped 2 garlic cloves, finely chopped 1 tsp smoked paprika 300g pearl barley 400g can of chopped tomatoes 1L hot chicken stock 2 stalks of rosemary, leaves chopped and stalks removed  Method  Heat a pan over a medium heat and fry chorizo for about 5 minutes until golden and have released its oil. Remove with a slotted spoon and set aside, covering with tin foil to keep warm (and stop you eating all of them)." />
     <meta property="og:url" content="https://github.com/compsoc-edinburgh/cook-book" />
     <meta property="og:site_name" content="CompSoc Cookbook" />
     <meta property="og:type" content="article" />
