--- a/recipes/courgette-and-mint-soup/index.html
+++ b/recipes/courgette-and-mint-soup/index.html
@@ -19,7 +19,7 @@
 
     <title>Courgette &amp; Mint soup | CompSoc Cookbook</title>
     <meta property="og:title" content="Courgette &amp; Mint soup" />
-    <meta property="og:description" content="Difficulty: 1-medium\nMeal: main_courses\nIngredients  knob of butter 1 onion, chopped 1kg courgettes, roughly chopped 1/2 tsp dried mint 1.3L vegetable stock 3-4 sprigs fresh mint Soured cream/yoghurt/single cream, to serve  Method  Heat butter in a large saucepan, add the onion and cooky gently until soft. Add the courgettes and dried mint, and stir well to mix with the onion. Cover and cook over a gentle heat for about 10 mins until the courgettes are softened but not charred." />
+    <meta property="og:description" content="Difficulty: 1-medium • Meal: main_courses • Ingredients  knob of butter 1 onion, chopped 1kg courgettes, roughly chopped 1/2 tsp dried mint 1.3L vegetable stock 3-4 sprigs fresh mint Soured cream/yoghurt/single cream, to serve  Method  Heat butter in a large saucepan, add the onion and cooky gently until soft. Add the courgettes and dried mint, and stir well to mix with the onion. Cover and cook over a gentle heat for about 10 mins until the courgettes are softened but not charred." />
     <meta property="og:url" content="https://github.com/compsoc-edinburgh/cook-book" />
     <meta property="og:site_name" content="CompSoc Cookbook" />
     <meta property="og:type" content="article" />
