--- a/recipes/gorgonzola_risotto_with_sun_dried_tomatoes/index.html
+++ b/recipes/gorgonzola_risotto_with_sun_dried_tomatoes/index.html
@@ -19,7 +19,7 @@
 
     <title>Gorgonzola risotto with sun dried tomatoes | CompSoc Cookbook</title>
     <meta property="og:title" content="Gorgonzola risotto with sun dried tomatoes" />
-    <meta property="og:description" content="Difficulty: 1-medium\nMeal: main_courses\nIngredients  1.2L stock (chicken or veg) 240ml dry white wine (e.g. Pinot Grigio) 300g risotto rice 280g jar of sun dried tomatoes in oil, chopped (slow roasted tomatoes also work) 1 onion, finely chopped 3 cloves garlic, minced 250g Gorgonzola, chopped into small pieces 25g butter Fresh basil for dressing  Method  Heat the stock in a saucepan over a low heat so it’s simmering gently Chop up the onion and the tomatoes." />
+    <meta property="og:description" content="Difficulty: 1-medium • Meal: main_courses • Ingredients  1.2L stock (chicken or veg) 240ml dry white wine (e.g. Pinot Grigio) 300g risotto rice 280g jar of sun dried tomatoes in oil, chopped (slow roasted tomatoes also work) 1 onion, finely chopped 3 cloves garlic, minced 250g Gorgonzola, chopped into small pieces 25g butter Fresh basil for dressing  Method  Heat the stock in a saucepan over a low heat so it’s simmering gently Chop up the onion and the tomatoes." />
     <meta property="og:url" content="https://github.com/compsoc-edinburgh/cook-book" />
     <meta property="og:site_name" content="CompSoc Cookbook" />
     <meta property="og:type" content="article" />
