--- a/recipes/harissa-chicken-traybake/index.html
+++ b/recipes/harissa-chicken-traybake/index.html
@@ -19,7 +19,7 @@
 
     <title>Harissa Chicken Traybake | CompSoc Cookbook</title>
     <meta property="og:title" content="Harissa Chicken Traybake" />
-    <meta property="og:description" content="Difficulty: 1-medium\nMeal: main_courses\nIngredients  3 tbsp harissa 3 tbsp low-fat natural yogurt 4 skinless chicken breasts, slashed 1 small butternut squash, peeled, deseeded and cut into wedges 2 red onions, cut into wedges  (Other vegetables also work, such as shallots, sweet potato(!), peppers, etc)
+    <meta property="og:description" content="Difficulty: 1-medium • Meal: main_courses • Ingredients  3 tbsp harissa 3 tbsp low-fat natural yogurt 4 skinless chicken breasts, slashed 1 small butternut squash, peeled, deseeded and cut into wedges 2 red onions, cut into wedges  (Other vegetables also work, such as shallots, sweet potato(!), peppers, etc)
 Method  Heat oven to 200C/180C fan. Mix 2 tbsp of harissa with the yogurt and rub all over the chicken breasts and set aside to marinate while you start the veg." />
     <meta property="og:url" content="https://github.com/compsoc-edinburgh/cook-book" />
     <meta property="og:site_name" content="CompSoc Cookbook" />
