--- a/recipes/instant-pot-spaghetti-meat-sauce/index.html
+++ b/recipes/instant-pot-spaghetti-meat-sauce/index.html
@@ -19,7 +19,7 @@
 
     <title>Instant Pot Spaghetti &amp; Meat Sauce | CompSoc Cookbook</title>
     <meta property="og:title" content="Instant Pot Spaghetti &amp; Meat Sauce" />
-    <meta property="og:description" content="Difficulty: 0-easy\nMeal: main_courses\nSuper duper easy recipe for spaghetti &amp; meat sauce that you can do right in an instant pot.
+    <meta property="og:description" content="Difficulty: 0-easy • Meal: main_courses • Super duper easy recipe for spaghetti &amp; meat sauce that you can do right in an instant pot.
 Ingredients  8 oz dry pasta (spaghetti works best) 1 tbsp olive oil 500g ground beef Small onion 475ml water 24oz tomato sauce (1 jar, or equiv. homemade) Garlic powder Onion powder Kosher salt Pepper Red pepper flakes Grated parmesan (for serving)  Method  Set your instant pot to Sauté, and once it&rsquo;s hot add the olive oil and minced onion." />
     <meta property="og:url" content="https://github.com/compsoc-edinburgh/cook-book" />
     <meta property="og:site_name" content="CompSoc Cookbook" />
