--- a/recipes/lamb-koftas/index.html
+++ b/recipes/lamb-koftas/index.html
@@ -19,7 +19,7 @@
 
     <title>Lamb Koftas | CompSoc Cookbook</title>
     <meta property="og:title" content="Lamb Koftas" />
-    <meta property="og:description" content="Difficulty: 1-medium\nMeal: main_courses\nIngredients  500g lamb mince 2 tsp ground cumin Chilli flakes, to taste 2 tbsp chopped parsley leaves 2 tbsp chopped mint leaves Salt Pepper  Method  Mix together all ingredients until well blended. Roll the lamb mixture into pieces the size of golf balls and flatten them into patties about 1 cm thick. Place on a plate drizzled with a little olive oil, and drizzle the tops of the patties with more oil, ready for cooking." />
+    <meta property="og:description" content="Difficulty: 1-medium • Meal: main_courses • Ingredients  500g lamb mince 2 tsp ground cumin Chilli flakes, to taste 2 tbsp chopped parsley leaves 2 tbsp chopped mint leaves Salt Pepper  Method  Mix together all ingredients until well blended. Roll the lamb mixture into pieces the size of golf balls and flatten them into patties about 1 cm thick. Place on a plate drizzled with a little olive oil, and drizzle the tops of the patties with more oil, ready for cooking." />
     <meta property="og:url" content="https://github.com/compsoc-edinburgh/cook-book" />
     <meta property="og:site_name" content="CompSoc Cookbook" />
     <meta property="og:type" content="article" />
