--- a/recipes/pizza-base/index.html
+++ b/recipes/pizza-base/index.html
@@ -19,7 +19,7 @@
 
     <title>Fool-proof Pizza Base | CompSoc Cookbook</title>
     <meta property="og:title" content="Fool-proof Pizza Base" />
-    <meta property="og:description" content="Difficulty: 0-easy\nMeal: main_courses\nYour friends and family are going to ask you whether Gordon Ramsay assisted.
+    <meta property="og:description" content="Difficulty: 0-easy • Meal: main_courses • Your friends and family are going to ask you whether Gordon Ramsay assisted.
 As seen on https://github.com/elenalape/pizza
 Ingredients:  1 large cup/2 normal cups all-purpose flour 1/2 cup warm water 1 tsp dry yeast 0.75 tsp salt 1/2 tsp sugar 1 tbsp olive oil Optional: garlic powder  Method:  Add a small amount of warm (not hot, you&rsquo;ll kill the yeast!) water into a mug and mix with yeast and sugar until both dissolve." />
     <meta property="og:url" content="https://github.com/compsoc-edinburgh/cook-book" />
