--- a/recipes/pork-and-pistachio-meatloaf/index.html
+++ b/recipes/pork-and-pistachio-meatloaf/index.html
@@ -19,7 +19,7 @@
 
     <title>Pork &amp; Pistachio Meatloaf | CompSoc Cookbook</title>
     <meta property="og:title" content="Pork &amp; Pistachio Meatloaf" />
-    <meta property="og:description" content="Difficulty: 1-medium\nMeal: main_courses\nIngredients  100g white breadcrumbs 150g pistachio nuts, roughly chopped 1kg pork mince 50g pickled gherkins, chopped into pieces 1 tbsp English mustard 3 garlic cloves, peeled and crushed 2 medium free range eggs, beaten Salt and pepper  Method  Preheat the oven to 180C fan. Line the base of a 900g non-stick loaf tin with grease proof paper. Combine all the ingredients in a large bowl. Get your hands involved to really squidge everything together." />
+    <meta property="og:description" content="Difficulty: 1-medium • Meal: main_courses • Ingredients  100g white breadcrumbs 150g pistachio nuts, roughly chopped 1kg pork mince 50g pickled gherkins, chopped into pieces 1 tbsp English mustard 3 garlic cloves, peeled and crushed 2 medium free range eggs, beaten Salt and pepper  Method  Preheat the oven to 180C fan. Line the base of a 900g non-stick loaf tin with grease proof paper. Combine all the ingredients in a large bowl. Get your hands involved to really squidge everything together." />
     <meta property="og:url" content="https://github.com/compsoc-edinburgh/cook-book" />
     <meta property="og:site_name" content="CompSoc Cookbook" />
     <meta property="og:type" content="article" />
