--- a/recipes/sausage-apple-and-leek-pie/index.html
+++ b/recipes/sausage-apple-and-leek-pie/index.html
@@ -19,7 +19,7 @@
 
     <title>Sausage, Apple and Leek Pie | CompSoc Cookbook</title>
     <meta property="og:title" content="Sausage, Apple and Leek Pie" />
-    <meta property="og:description" content="Difficulty: 0-easy\nMeal: main_courses\nIngredients  8 sausages 1 apple, peeled and sliced into small bits 3 leeks, sliced (depending on size) 1 tbsp plain flour 1 tbsp grainy mustard 300ml stock 375g ready-rolled shortcut pastry 1 egg, beaten  Method  Preheat oven to 200C/Fan 180C. Fry sausages in large frying pan until brown on all sides. Remove from the frying pan and set to one side. Fry the leeks for 8-10 minutes until softened, then add the apple and fry for 1 minute." />
+    <meta property="og:description" content="Difficulty: 0-easy • Meal: main_courses • Ingredients  8 sausages 1 apple, peeled and sliced into small bits 3 leeks, sliced (depending on size) 1 tbsp plain flour 1 tbsp grainy mustard 300ml stock 375g ready-rolled shortcut pastry 1 egg, beaten  Method  Preheat oven to 200C/Fan 180C. Fry sausages in large frying pan until brown on all sides. Remove from the frying pan and set to one side. Fry the leeks for 8-10 minutes until softened, then add the apple and fry for 1 minute." />
     <meta property="og:url" content="https://github.com/compsoc-edinburgh/cook-book" />
     <meta property="og:site_name" content="CompSoc Cookbook" />
     <meta property="og:type" content="article" />
