--- a/recipes/slow-cooker-banh-mi/index.html
+++ b/recipes/slow-cooker-banh-mi/index.html
@@ -19,7 +19,7 @@
 
     <title>Slow Cooker Bánh Mì | CompSoc Cookbook</title>
     <meta property="og:title" content="Slow Cooker Bánh Mì" />
-    <meta property="og:description" content="Difficulty: 0-easy\nMeal: main_courses\nIngredients  2kg pork shoulder 2 jalapeño, diced 2 2in piece of ginger, sliced thin 8 cloves garlic, minced 250ml soy sauce 120ml white wine/cider vinegar 220g brown sugar  Method  Season the pork shoulder with salt and pepper. In the slow cooker, stir together the jalapeño, ginger, garlic, soy sauce, vinegar and brown sugar. Nestle the pork in the liquid. Cover and cook on low for 8 hours or high for 4-5hrs  To serve: Serve in warmed baguettes with mayonnaise, sriracha and pickled carrots and pickled red cabbage." />
+    <meta property="og:description" content="Difficulty: 0-easy • Meal: main_courses • Ingredients  2kg pork shoulder 2 jalapeño, diced 2 2in piece of ginger, sliced thin 8 cloves garlic, minced 250ml soy sauce 120ml white wine/cider vinegar 220g brown sugar  Method  Season the pork shoulder with salt and pepper. In the slow cooker, stir together the jalapeño, ginger, garlic, soy sauce, vinegar and brown sugar. Nestle the pork in the liquid. Cover and cook on low for 8 hours or high for 4-5hrs  To serve: Serve in warmed baguettes with mayonnaise, sriracha and pickled carrots and pickled red cabbage." />
     <meta property="og:url" content="https://github.com/compsoc-edinburgh/cook-book" />
     <meta property="og:site_name" content="CompSoc Cookbook" />
     <meta property="og:type" content="article" />
