--- a/recipes/slow-cooker-honey-sriracha-chicken/index.html
+++ b/recipes/slow-cooker-honey-sriracha-chicken/index.html
@@ -19,7 +19,7 @@
 
     <title>Slow Cooker Honey Sriracha Chicken | CompSoc Cookbook</title>
     <meta property="og:title" content="Slow Cooker Honey Sriracha Chicken" />
-    <meta property="og:description" content="Difficulty: 0-easy\nMeal: main_courses\nIngredients  6 chicken thighs, bone-in &amp; skin on 4 tbsp ketchup (spicy, Polish ketchup recommended) 4 tbsp soy sauce 4 tbsp honey 1 lime, juiced 2 tbsp Sriracha 3 cloves garlic, minced  Method  Heat oil in large frying pan over high heat. Add chicken and sear until golden brown on both sides, 2-3 minutes on each side. Transfer chicken to slow cooker. In a bowl, combine ketchup, soy sauce, honey, lime juice, sriracha and garlic." />
+    <meta property="og:description" content="Difficulty: 0-easy • Meal: main_courses • Ingredients  6 chicken thighs, bone-in &amp; skin on 4 tbsp ketchup (spicy, Polish ketchup recommended) 4 tbsp soy sauce 4 tbsp honey 1 lime, juiced 2 tbsp Sriracha 3 cloves garlic, minced  Method  Heat oil in large frying pan over high heat. Add chicken and sear until golden brown on both sides, 2-3 minutes on each side. Transfer chicken to slow cooker. In a bowl, combine ketchup, soy sauce, honey, lime juice, sriracha and garlic." />
     <meta property="og:url" content="https://github.com/compsoc-edinburgh/cook-book" />
     <meta property="og:site_name" content="CompSoc Cookbook" />
     <meta property="og:type" content="article" />
