--- a/recipes/slow_roasted_pork_belly_with_fennel/index.html
+++ b/recipes/slow_roasted_pork_belly_with_fennel/index.html
@@ -19,7 +19,7 @@
 
     <title>Slow-Roasted Pork Belly with Fennel | CompSoc Cookbook</title>
     <meta property="og:title" content="Slow-Roasted Pork Belly with Fennel" />
-    <meta property="og:description" content="Difficulty: 1-medium\nMeal: main_courses\nIngredients  1kg pork belly 1 fennel bulb, trimmed and roughly sliced 4 fresh bay leaves 3 garlic cloves, peeled and bashed 1 tsp cardamom pods, bashed 4 star anise 1 tbsp fennel seeds 325ml white wine 500-750ml chicken stock 1 tbsp wholegrain mustard  Method  Preheat the oven to 180C/fan 160C Score the pork belly skin diagonally in a diamond pattern at 1.5cm intervals. Season generously with salt and pepper rubbing it well into the skin." />
+    <meta property="og:description" content="Difficulty: 1-medium • Meal: main_courses • Ingredients  1kg pork belly 1 fennel bulb, trimmed and roughly sliced 4 fresh bay leaves 3 garlic cloves, peeled and bashed 1 tsp cardamom pods, bashed 4 star anise 1 tbsp fennel seeds 325ml white wine 500-750ml chicken stock 1 tbsp wholegrain mustard  Method  Preheat the oven to 180C/fan 160C Score the pork belly skin diagonally in a diamond pattern at 1.5cm intervals. Season generously with salt and pepper rubbing it well into the skin." />
     <meta property="og:url" content="https://github.com/compsoc-edinburgh/cook-book" />
     <meta property="og:site_name" content="CompSoc Cookbook" />
     <meta property="og:type" content="article" />
