--- a/recipes/spanish-eggs/index.html
+++ b/recipes/spanish-eggs/index.html
@@ -19,7 +19,7 @@
 
     <title>&#34;Spanish&#34; Eggs | CompSoc Cookbook</title>
     <meta property="og:title" content="&#34;Spanish&#34; Eggs" />
-    <meta property="og:description" content="Difficulty: 0-easy\nMeal: main_courses\nIngredients  1/2 ring of chorizo, chopped into small semi/quarter circles 1 red onion, sliced in half and chopped into thin semicircles 1 red or yellow pepper, deseeded and chopped into 1in chunks 2-3 eggs per person 2 garlic cloves, finely chopped 1.5 tsp chilli flakes (adjust to preference)  Method  Heat some oil in a pan over a medium heat. Add the chorizo and cook until they have released their oil and are becoming cooked." />
+    <meta property="og:description" content="Difficulty: 0-easy • Meal: main_courses • Ingredients  1/2 ring of chorizo, chopped into small semi/quarter circles 1 red onion, sliced in half and chopped into thin semicircles 1 red or yellow pepper, deseeded and chopped into 1in chunks 2-3 eggs per person 2 garlic cloves, finely chopped 1.5 tsp chilli flakes (adjust to preference)  Method  Heat some oil in a pan over a medium heat. Add the chorizo and cook until they have released their oil and are becoming cooked." />
     <meta property="og:url" content="https://github.com/compsoc-edinburgh/cook-book" />
     <meta property="og:site_name" content="CompSoc Cookbook" />
     <meta property="og:type" content="article" />
