--- a/recipes/steak-pie/index.html
+++ b/recipes/steak-pie/index.html
@@ -19,7 +19,7 @@
 
     <title>Steak Pie | CompSoc Cookbook</title>
     <meta property="og:title" content="Steak Pie" />
-    <meta property="og:description" content="Difficulty: 1-medium\nMeal: main_courses\nIngredients  900g stewing/braising steak, cut into cubes 25g plain flour, seasoned with salt and pepper 1 tbsp olive oil 2 onions, sliced 1 tbsp chopped fresh parsley 1 tbsp chopped fresh thyme 850ml / 1.5 pints hot beef stock 225g ready-rolled shortcrust pastry 1 egg, beaten  Method  Roll the cubed steak in the seasoned flour until well coated. Heat the oil in a large heavy-bottomed frying bowl and fry the meat, stirring frequently, until browned on all sides." />
+    <meta property="og:description" content="Difficulty: 1-medium • Meal: main_courses • Ingredients  900g stewing/braising steak, cut into cubes 25g plain flour, seasoned with salt and pepper 1 tbsp olive oil 2 onions, sliced 1 tbsp chopped fresh parsley 1 tbsp chopped fresh thyme 850ml / 1.5 pints hot beef stock 225g ready-rolled shortcrust pastry 1 egg, beaten  Method  Roll the cubed steak in the seasoned flour until well coated. Heat the oil in a large heavy-bottomed frying bowl and fry the meat, stirring frequently, until browned on all sides." />
     <meta property="og:url" content="https://github.com/compsoc-edinburgh/cook-book" />
     <meta property="og:site_name" content="CompSoc Cookbook" />
     <meta property="og:type" content="article" />
