--- a/recipes/stuffed-peppers/index.html
+++ b/recipes/stuffed-peppers/index.html
@@ -19,7 +19,7 @@
 
     <title>Stuffed peppers with mushrooms | CompSoc Cookbook</title>
     <meta property="og:title" content="Stuffed peppers with mushrooms" />
-    <meta property="og:description" content="Difficulty: 1-medium\nMeal: main_courses\nThis vegan recipe is sure to impress your guests and makes for a lovely main course!
+    <meta property="og:description" content="Difficulty: 1-medium • Meal: main_courses • This vegan recipe is sure to impress your guests and makes for a lovely main course!
 Adapted from this recipe with slight alterations - check it out if you need visuals.
 Ingredients  11 peppers (I tend to use red or yellow) 3 brown onions, finely chopped 2 carrots, coarsely grated 300g Champignon mushrooms (any of the smaller mushrooms varieties should do), washed and finely chopped 200g rice (risotto or generally white rice) 1 bunch of fresh dill, finely chopped 1 can chopped tomatoes 1 tbsp dry thyme 60ml oil 1 tsp salt 1 tsp pepper 2 vegetable stock cubes  Method  Add oil to the pan along with the onions and the carrots, fry for 7-8 minutes." />
     <meta property="og:url" content="https://github.com/compsoc-edinburgh/cook-book" />
