--- a/recipes/turkish-eggs/index.html
+++ b/recipes/turkish-eggs/index.html
@@ -19,7 +19,7 @@
 
     <title>Turkish Eggs / Shakshuka | CompSoc Cookbook</title>
     <meta property="og:title" content="Turkish Eggs / Shakshuka" />
-    <meta property="og:description" content="Difficulty: 0-easy\nMeal: main_courses\nIngredients  2 small onion 4 eggs 1 tin chopped tomatoes 1 red pepper, deseeded and sliced 1-2 red chillies, deseeded and sliced 1-2 tsp caster sugar 2 sprigs thyme 1.5 tsp ground cumin 1 tbsp parsley, roughly chopped 2 garlic cloves, crushed 6 tbsp thick, creamy yogurt  Method  Heat the oil in a heavy-based frying pan. Stir in the onions, pepper and chillies. Cook until they begin to soften." />
+    <meta property="og:description" content="Difficulty: 0-easy • Meal: main_courses • Ingredients  2 small onion 4 eggs 1 tin chopped tomatoes 1 red pepper, deseeded and sliced 1-2 red chillies, deseeded and sliced 1-2 tsp caster sugar 2 sprigs thyme 1.5 tsp ground cumin 1 tbsp parsley, roughly chopped 2 garlic cloves, crushed 6 tbsp thick, creamy yogurt  Method  Heat the oil in a heavy-based frying pan. Stir in the onions, pepper and chillies. Cook until they begin to soften." />
     <meta property="og:url" content="https://github.com/compsoc-edinburgh/cook-book" />
     <meta property="og:site_name" content="CompSoc Cookbook" />
     <meta property="og:type" content="article" />
