--- a/recipes/wikipedia_pina_colada/index.html
+++ b/recipes/wikipedia_pina_colada/index.html
@@ -19,7 +19,7 @@
 
     <title>Textbook (Wikipedia inspired) Piña Colada | CompSoc Cookbook</title>
     <meta property="og:title" content="Textbook (Wikipedia inspired) Piña Colada" />
-    <meta property="og:description" content="Difficulty: 0-easy\nMeal: cocktails\nIngredients  1 part white rum 1 part (Alpro) coconut drink 3 parts pineapple juice Ice  Method  Add ice to shaker Pour in all liquids Shake for an arbitrary amount of time Profit!  " />
+    <meta property="og:description" content="Difficulty: 0-easy • Meal: cocktails • Ingredients  1 part white rum 1 part (Alpro) coconut drink 3 parts pineapple juice Ice  Method  Add ice to shaker Pour in all liquids Shake for an arbitrary amount of time Profit!  " />
     <meta property="og:url" content="https://github.com/compsoc-edinburgh/cook-book" />
     <meta property="og:site_name" content="CompSoc Cookbook" />
     <meta property="og:type" content="article" />
