--- a/meals/cocktails/index.html
+++ b/meals/cocktails/index.html
@@ -17,6 +17,10 @@
 <link rel="stylesheet" href="../../scss/main.min.be588b3d120141efcf2b8a68c20cb46f26857995dab56d5cd6df0d1837533392.css"  integrity="sha256-vliLPRIBQe/PK4powgy0byaFeZXatW1c1t8NGDdTM5I=">
 
     <title>Browsing all cocktails dishes | CompSoc Cookbook</title>
+    <meta property="og:title" content="List of all cocktails" />
+    <meta property="og:description" content="There are 2 recipes that are classified as cocktails!" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://cookbook.betterinformatics.com" />
   </head>
   <body>
     <div class="container">
