--- a/meals/index.html
+++ b/meals/index.html
@@ -17,7 +17,11 @@
 
 <link rel="stylesheet" href="../scss/main.min.be588b3d120141efcf2b8a68c20cb46f26857995dab56d5cd6df0d1837533392.css"  integrity="sha256-vliLPRIBQe/PK4powgy0byaFeZXatW1c1t8NGDdTM5I=">
 
-    <title>Browsing all meals</title>
+    <title>Browsing all meals | CompSoc Cookbook</title>
+    <meta property="og:title" content="List of all meals" />
+    <meta property="og:description" content="We have a variety of types of meals to cater you, perfect for every appetite and every occasion. Come and browse!" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://cookbook.betterinformatics.com" />
   </head>
   <body>
     <div class="container">
