--- a/recipes/chickpea_spinach_and_egg_curry/index.html
+++ b/recipes/chickpea_spinach_and_egg_curry/index.html
@@ -19,7 +19,7 @@
 
     <title>Chickpea, spinach and egg curry | CompSoc Cookbook</title>
     <meta property="og:title" content="Chickpea, spinach and egg curry" />
-    <meta property="og:description" content="Difficulty: 0-easy\nMeal: main_courses\nIngredients  2 eggs 2 tsp cumin seeds 1 tsp black mustard seeds 2 tbsp medium curry powder 1 tsp garlic granules 1 tsp ground ginger 400g tin chopped tomatoes 400g tin chickpeas, drained &amp; rinsed 1 tbsp lemon juice 100ml boiling water 180g baby spinach leaves Fresh coriander, to garnish  Method  Boil the eggs for 6-8 minutes. Shock in an ice bath once done to make peeling easier." />
+    <meta property="og:description" content="Difficulty: 0-easy • Meal: main_courses • Ingredients  2 eggs 2 tsp cumin seeds 1 tsp black mustard seeds 2 tbsp medium curry powder 1 tsp garlic granules 1 tsp ground ginger 400g tin chopped tomatoes 400g tin chickpeas, drained &amp; rinsed 1 tbsp lemon juice 100ml boiling water 180g baby spinach leaves Fresh coriander, to garnish  Method  Boil the eggs for 6-8 minutes. Shock in an ice bath once done to make peeling easier." />
     <meta property="og:url" content="https://github.com/compsoc-edinburgh/cook-book" />
     <meta property="og:site_name" content="CompSoc Cookbook" />
     <meta property="og:type" content="article" />
