--- a/recipes/chorizo_linguine/index.html
+++ b/recipes/chorizo_linguine/index.html
@@ -19,7 +19,7 @@
 
     <title>Chorizo Linguine | CompSoc Cookbook</title>
     <meta property="og:title" content="Chorizo Linguine" />
-    <meta property="og:description" content="Difficulty: 0-easy\nMeal: main_courses\nIngredients  2 people’s worth linguine, ~120g? 1/3 ring of chorizo, cut into thick quarter moons Juice of half a large lemon Handful fresh parsley, around 6 stems, plucked and finely chopped 2 tbsp capers, drained ~60g grated Parmesan/gran padano  Method  Bring a pot of heavily salted water to the boil and add the pasta, cooking until al-dente (roughly 8 minutes) Meanwhile in a large frying pan, fry the chorizo in a small bit of olive oil until it gives up its oil and becomes crispy Lower the heat and add the capers and fry for a minute, stirring frequently." />
+    <meta property="og:description" content="Difficulty: 0-easy • Meal: main_courses • Ingredients  2 people’s worth linguine, ~120g? 1/3 ring of chorizo, cut into thick quarter moons Juice of half a large lemon Handful fresh parsley, around 6 stems, plucked and finely chopped 2 tbsp capers, drained ~60g grated Parmesan/gran padano  Method  Bring a pot of heavily salted water to the boil and add the pasta, cooking until al-dente (roughly 8 minutes) Meanwhile in a large frying pan, fry the chorizo in a small bit of olive oil until it gives up its oil and becomes crispy Lower the heat and add the capers and fry for a minute, stirring frequently." />
     <meta property="og:url" content="https://github.com/compsoc-edinburgh/cook-book" />
     <meta property="og:site_name" content="CompSoc Cookbook" />
     <meta property="og:type" content="article" />
