--- a/recipes/index.html
+++ b/recipes/index.html
@@ -16,7 +16,11 @@
 
 <link rel="stylesheet" href="../scss/main.min.be588b3d120141efcf2b8a68c20cb46f26857995dab56d5cd6df0d1837533392.css"  integrity="sha256-vliLPRIBQe/PK4powgy0byaFeZXatW1c1t8NGDdTM5I=">
 
-    <title>CompSoc Cookbook</title>
+    <title>Recipes | CompSoc Cookbook</title>
+    <meta property="og:title" content="Recipes" />
+    <meta property="og:description" content="Recipe search result" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://cookbook.betterinformatics.com" />
   </head>
   <body>
     <div class="container">
