--- a/recipes/pierogi/index.html
+++ b/recipes/pierogi/index.html
@@ -19,7 +19,7 @@
 
     <title>Pierogi | CompSoc Cookbook</title>
     <meta property="og:title" content="Pierogi" />
-    <meta property="og:description" content="Difficulty: 2-hard\nMeal: main_courses\nDough Ingredients  0.5kg plain flour 1 large eggs 1 glass of lukewarm water 1 tbsp of oil Pinch of salt  Method To make the dough:
+    <meta property="og:description" content="Difficulty: 2-hard • Meal: main_courses • Dough Ingredients  0.5kg plain flour 1 large eggs 1 glass of lukewarm water 1 tbsp of oil Pinch of salt  Method To make the dough:
  Mix flour and salt in a bowl/on a kneading board (as for pasta). Make a well in the centre and add the eggs and oil into it. Mix together, slowly adding water, until it forms a smooth and non-sticky dough. Leave to rest, covered by a clean tea towel or cling film, for 30mins." />
     <meta property="og:url" content="https://github.com/compsoc-edinburgh/cook-book" />
     <meta property="og:site_name" content="CompSoc Cookbook" />
