--- a/recipes/thai-eggs/index.html
+++ b/recipes/thai-eggs/index.html
@@ -19,7 +19,7 @@
 
     <title>Thai Eggs | CompSoc Cookbook</title>
     <meta property="og:title" content="Thai Eggs" />
-    <meta property="og:description" content="Difficulty: 1-medium\nMeal: main_courses\nIngredients  1 tbsp Thai green curry paste 1 tbsp soy sauce 1 tsp fish sauce 1 tsp oyster sauce (optional) 2-3 eggs per person 1 green peppers, deseeded and chopped into 1in chunks 2 handfuls spinach per person 1/2 lime/lemon per person (either citrus works)  Method  Heat some oil in a frying pan over medium heat. Add the curry paste to the pan and fry for 1-2 minutes until it releases its fragrance, stirring frequently." />
+    <meta property="og:description" content="Difficulty: 1-medium • Meal: main_courses • Ingredients  1 tbsp Thai green curry paste 1 tbsp soy sauce 1 tsp fish sauce 1 tsp oyster sauce (optional) 2-3 eggs per person 1 green peppers, deseeded and chopped into 1in chunks 2 handfuls spinach per person 1/2 lime/lemon per person (either citrus works)  Method  Heat some oil in a frying pan over medium heat. Add the curry paste to the pan and fry for 1-2 minutes until it releases its fragrance, stirring frequently." />
     <meta property="og:url" content="https://github.com/compsoc-edinburgh/cook-book" />
     <meta property="og:site_name" content="CompSoc Cookbook" />
     <meta property="og:type" content="article" />
